<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">find-android-merchants</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- activity login -->
    <string name="activity_login_email">账 号 : </string>
    <string name="activity_login_password">密 码 : </string>
    <string name="activity_login_toast_emptyusername">输入的用户名不能为空！</string>
    <string name="activiry_login_toast_emptypassword">输入的密码不能为空！</string>
    <string name="activity_login_toast_login_error">登录失败</string>
    <string name="activity_login_toast_network_error">网络错误</string>

    <!-- Register FirstStep -->
    <string name="merchants_Register_ChoiseUserAvatar">选择头像</string>
    <string name="merchants_Register_NickName">商户名称</string>
    <string name="merchants_Register_Email">您的邮箱</string>
    <string name="merchants_Register_Phone_First">联系电话</string>
    <string name="merchants_Register_Phone_Second">紧急电话</string>
    <string name="merchants_Register_Pswd">输入密码</string>
    <string name="merchants_Register_VerifyPswd">确认密码</string>
    <string name="merchants_Register_MarketingCode">营销代码</string>
    <string name="merchants_Register_NextStep">下一步</string>

    <!-- Register  FirstStep hint -->
    <string name="nickName_Null">商户名称不能为空</string>
    <string name="email_Null">邮箱不能为空</string>
    <string name="phone_First_Null">号码不能为空</string>
    <string name="phone_Second_Null">紧急联系人号码不能为空</string>
    <string name="pswd_Null">密码不能为空</string>
    <string name="verifyPswd_Null">确认密码不能为空</string>
    <string name="marketingCode_Null">营销代码不能为空</string>

    <!-- Register SceondStep -->
    <string name="merchants_Register_companyName">公司名称</string>
    <string name="merchants_Register_FirmName">企业名称</string>
    <string name="merchants_Register_BusinessLicense_Address">执照驻地</string>
    <string name="merchants_Register_BusinessDeadline">营业期限</string>
    <string name="merchants_Register_MarketAddress">店铺地址</string>
    <string name="merchants_Register_LicensePic">营业执照扫描件</string>
    <string name="merchants_Register_Submit">提交</string>

    <!-- 商户登录成功后的主页面 -->
    <string name="merchants_AddGoods">添加商品</string>

    <!-- automatic build -->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- 商品分类 -->
    <string-array name="goods_category">
        <item>山西特产</item>
        <item>母婴用品</item>
        <item>酒饮冲调</item>
        <item>进口食品</item>
        <item>休闲食品</item>
        <item>保健滋补</item>
        <item>粮油调味</item>
        <item>个护化妆</item>
        <item>厨房用品</item>
        <item>清洁洗涤</item>
        <item>家居家纺</item>
        <item>成人用品</item>
        <item>熟食</item>
        <item>蛋糕</item>
    </string-array>

    <!-- 商品的包装方式 -->
    <string-array name="goods_parytype">
        <item>散装</item>
        <item>零装</item>
    </string-array>

    <!-- 选择图片的来源 -->
    <string name="goods_choiseMsg">选择图片来源</string>
    <!-- 选择图片的来源的方式 -->
    <string-array name="goods_choisePicType">
        <item>图库选取</item>
        <item>相机拍摄</item>
    </string-array>

    <!-- Add Goods -->
    <string name="goods_pic_defaultdescription">default</string>

</resources>