<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/merchants_Register_companyName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/merchants_Register_ComPanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/merchants_Register_companyName"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/merchants_Register_FirmName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/merchants_Register_FirmName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/merchants_Register_FirmName"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/merchants_Register_BusinessLicense_Address"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/merchants_Register_License_Address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/merchants_Register_BusinessLicense_Address"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/merchants_Register_BusinessDeadline"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/merchants_Register_BusinessDeadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/merchants_Register_BusinessDeadline"
                android:inputType="phone"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/merchants_Register_MarketAddress"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/merchants_Register_MarketAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/merchants_Register_MarketAddress"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/merchants_Register_ChooiseLicensePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/merchants_Register_LicensePic"
                android:singleLine="true" >
            </Button>

            <ImageView
                android:id="@+id/merchants_Register_LicensePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <Button
            android:id="@+id/register_Submin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merchants_Register_Submit" />
    </LinearLayout>

</LinearLayout>